# kairos

./: .dockerignore  .env.example  .gitignore  ARCHITECTURAL_PROPOSAL.md  BENCHMARK_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  P12-open-platform-report.md  P14-performance-polish-report.md  P15-open-source-polish-report.md  README.md  RELEASE-CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.yml  go.mod  go.sum  prometheus.yml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
benchmarks/: evaluator.py
cli/: SPECIFICATION.md
dashboard/: app.py
demo/: demo_script.md  walkthrough.md
docker/: api.Dockerfile  dashboard.Dockerfile  gateway.Dockerfile  intelligence.Dockerfile  worker.Dockerfile
docs/: ACCOUNT.md  API_KEYS.md  API_PLATFORM_PLAN.md  ARCHITECTURE.md  BENCHMARKS.md  BILLING.md  BRAND_SYSTEM.md  CONFIGURATION.md  DATA-FLOW.md  DEPLOYMENT.md  DESIGN_SYSTEM_REFERENCE.md  DEVELOPER.md  EXPERIMENTS.md  GITHUB-TOPICS.md  INDEX.md  OBSERVABILITY.md  OPERATIONS.md  PHASE_1_SCOPE.md  PIPELINE.md  PLANS.md  PRODUCT_DEFINITION.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  case_study.md  interview_talking_points.md  portfolio_case_study.md  resume_bullets.md
gateway/: main.go
intelligence/: main.py  worker.py
models/: registry.json
proto/: rag.proto
reports/: P5-production-readiness-report.md
sdk/: README.md  pyproject.toml
sdk/kairos/: __init__.py  client.py  exceptions.py
sdk/keiro/: __init__.py  client.py  exceptions.py  models.py
(+784 files in other folders)
